<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/myJobsFragment"
        android:icon="@drawable/bottom_nav_my_job_icon"
        android:title="@string/MyJobs" />
    <item
        android:id="@+id/myAccountFragment"
        android:icon="@drawable/bottom_nav_my_account_icon"
        android:title="@string/MyAccount" />
    <item
        android:id="@+id/timeSheetsFragment"
        android:icon="@drawable/bottom_nav_time_sheet_icon"
        android:title="@string/TimeSheet" />
</menu>
