<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_85F9F9F9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginStart="17dp"
            android:text="@string/TimeSheets"
            android:fontFamily="@font/manrope_semibold"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="#103A78"
            android:letterSpacing="0.03"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/two"
        android:gravity="center"
        android:textColor="#042C5C"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weekDay"
        android:layout_marginStart="70dp"
        android:layout_marginTop="158dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/day"
        android:textColor="#979797"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/year"
        android:textColor="#979797"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalTimeDisplay"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/time"
        android:textColor="@color/login_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:id="@+id/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:background="@drawable/timesheet_button_round_corner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startTimer"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="60dp"
            android:text="@string/StartTimer"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/timesheet_start_timer_icon"
            android:contentDescription="@string/image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:background="#85F9F9F9"
        android:id="@+id/timesheetRecycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintVertical_bias="0.025"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/time_sheet_recycle_view_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>