<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            android:background="#F2F2F2"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/job_start_time"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/time_start"
        android:gravity="center"
        android:textColor="#042C5C"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/job_end_time"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/time_end_time"
        android:textColor="#D1D1D1"
        android:gravity="center"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/job_start_time"
        app:layout_constraintTop_toBottomOf="@id/job_start_time"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/my_jobs_recycle_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/manrope_bold"
            android:textStyle="bold"
            android:lineSpacingExtra="2sp"
            android:translationY="-0.75sp"
            android:gravity="top"
            android:maxLines="3"
            android:text="@string/anytime_3hr"
            android:textColor="#103A78"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/loc"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image"
            android:src="@drawable/job_details_location18_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="5dp"
            android:maxLines="2"
            android:text="@string/nz"
            android:textColor="#38042C5C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loc"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/progressStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/manrope_semibold"
            android:textStyle="bold"
            android:text="@string/InProgress"
            android:textColor="#FFB800"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
