<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backPress"
            android:layout_width="22dp"
            android:layout_height="14dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/image"
            android:src="@drawable/profile_settings_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="377dp"
            android:layout_height="50dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="85dp"
            android:text="@string/privacy"
            android:textColor="#103A78"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/manrope_extralight"
        android:text="@string/change_your"
        android:textColor="#042C5C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="23dp"
        android:hint="@string/currentPassword"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentPasswordET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="23dp"
        android:hint="@string/newPassword"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="23dp"
        android:hint="@string/confirmPassword"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/updatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button_round"
        android:text="@string/updatePassword"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>