<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backPress"
            android:layout_width="22dp"
            android:layout_height="14dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/des"
            android:src="@drawable/profile_settings_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="377dp"
            android:layout_height="50dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/profile_set"
            android:textColor="#103A78"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/personal_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/manrope"
        android:text="@string/personal_in"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/first_name"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/last_name"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email_address"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddressEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cellPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/cell_phone"
        android:textColorHint="#77869E"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="#77869E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cellPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#77869E"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="#042C5C"
            android:theme="@style/privacyField" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateProfile"
        style="@style/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/profile_settings_button_round_corner"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>